# SubSurf

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  codex-login-provider.md  gateway.md  qa.md  wizard.md
scripts/: __init__.py  cc_session_bridge.py  oauth_pool.py
subsurf/: __init__.py  anthropic_oauth.py  attach.py  codex_auth.py  config.py  demo.py  engine.py  events.py  gateway.py  litellm_provider.py  litellm_smoke.py  model_discovery.py  models.py  openai_models.py  qa.py  setup.py  setup_tui.py  throttle.py  wizard.py
tests/: test_anthropic_oauth.py  test_attach.py  test_bridge_safety.py  test_codex_auth.py  test_demo.py  test_engine.py  test_gateway.py  test_litellm_provider.py  test_model_discovery.py  test_models.py  test_oauth_pool.py  test_setup.py  test_setup_tui.py  test_throttle.py  test_wizard.py
