[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "subsurf"
version = "0.1.0"
description = "Standalone Claude Code OAuth piggyback, token keepalive, and token-pool tooling"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "anthropic>=0.52",
    "litellm>=1.30",
    "structlog>=24.1",
]

[project.optional-dependencies]
gateway = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
tui = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "textual>=0.86",
]
dev = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "textual>=0.86",
    "uvicorn>=0.29",
]

[project.scripts]
subsurf-attach = "subsurf.attach:main"
subsurf-bridge = "scripts.cc_session_bridge:main"
subsurf-demo = "subsurf.demo:main"
subsurf-gateway = "subsurf.gateway:main"
subsurf-litellm-smoke = "subsurf.litellm_smoke:main"
subsurf-models = "subsurf.models:main"
subsurf-pool = "scripts.oauth_pool:main"
subsurf-qa = "subsurf.qa:main"
subsurf-setup = "subsurf.setup_tui:main"
subsurf-wizard = "subsurf.wizard:main"

[tool.hatch.build.targets.wheel]
packages = ["subsurf", "scripts"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
